Fix avatar overwrapping the timestamp

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -1058,6 +1058,11 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         &[data-expanded=true] {
             .mx_EventTile_info {
                 padding-block: 0;
+                margin-inline-start: 0;
+
+                .mx_EventTile_avatar {
+                    inset-inline-start: calc($MessageTimestamp_width + 14px - 4px); // 14px: avatar width, 4px: align with text
+                }
 
                 .mx_EventTile_line {
                     padding-block: var(--BaseCard_EventTile_line-padding-block);
